# i7e

./: .gitignore  README.md  biome.json  bun.lockb  package.json
apps/client/: package.json  tailwind.config.ts
apps/client/src/: env.js
apps/client/src/assets/: icons.tsx
apps/client/src/components/chat/: ChatInput.tsx  (+2 more)
apps/client/src/hooks/: useChat.ts
apps/client/src/pages/: _app.tsx  chat.tsx  index.tsx
apps/client/src/store/: index.ts
apps/server/: .env.example  main.py  makefile  pyproject.toml  ruff.toml
apps/server/server/config/: __init__.py  env.py  settings.py
apps/server/server/flows/chat/gemini/: provider.py
apps/server/server/flows/chat/openai/: __init__.py  _api.py  provider.py
apps/server/server/protocol/chat/: provider.py
apps/server/server/protocol/chatbot/: schema.py
apps/server/server/providers/gemini/: __init__.py
apps/server/server/providers/gemini/chat/: _api.py  provider.py
apps/server/server/providers/openai/chat/: __init__.py  chatbot.py  provider.py
apps/server/server/providers/openai/chatbot/: _api.py  chatbot.py
apps/server/server/router/: __init__.py  app.py  chat.py  user.py
apps/server/server/router/chat/: router.py  schema.py
apps/server/server/router/generate/: router.py  schema.py
apps/server/server/router/health/: router.py
apps/server/server/router/score/: router.py
apps/server/server/router/user/: __init__.py
apps/server/server/services/: chat_service.py
apps/server/server/store/: __init__.py  store.py
apps/server/server/utils/: __init__.py  emitter.py  env.py  log.py  logger.py
(+15 files in other folders)
